# music_bot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
bot/: __main__.py  bot.py  config.py
bot/audio/: autosuggest.py  player.py  queue.py  source.py
bot/cogs/: music.py  player_ui.py  queue.py  utility.py
bot/services/: ytmusic.py
bot/ui/: buttons.py  embeds.py  paginator.py
bot/utils/: checks.py  time.py  url_helpers.py
music_bot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_autosuggest.py  test_player.py  test_queue.py  test_ytmusic.py
